# lorekeeper-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  justfile  main.py  opencode.json  pyproject.toml  test_open5e_unified_search.py  test_output.txt  test_results.json  test_results.md
.opencode/command/: openspec-apply-sdd.md  openspec-apply.md  openspec-plan.md
docs/: architecture.md  cache.md  cli-usage.md  code-quality.md  development.md  document-filtering.md  testing.md  tools.md
docs/apis/: 5e-srd-api.md  open5e-api.md  open5e-unified-search-testing.md
docs/migrations/: 2025-11-12-monsters-to-creatures.md
docs/plans/: 2025-11-12-fix-test-failures-creatures-nomenclature.md
openspec/: project.md
openspec/changes/add-document-filtering/: design.md  tasks.md
openspec/changes/add-document-tracking-and-filters/: design.md  proposal.md  tasks.md
openspec/changes/add-serve-command/: proposal.md
openspec/changes/build-api-clients/: design.md  proposal.md
openspec/changes/consolidate-spec-documentation/: proposal.md  tasks.md
openspec/changes/enhance-search-capabilities/: design.md  proposal.md  tasks.md
openspec/changes/fix-mcp-filtering-critical-issues/: design.md  plan.md  proposal.md
openspec/changes/fix-open5e-api-issues/: design.md  plan.md  tasks.md
openspec/changes/fix-test-failures/: proposal.md  tasks.md
openspec/changes/implement-build-cache-flag/: design.md  proposal.md  tasks.md
openspec/changes/implement-case-insensitive-search/: proposal.md  tasks.md
openspec/changes/implement-dnd5e-client/: proposal.md  tasks.md
openspec/changes/implement-entity-cache/: design.md  proposal.md  tasks.md
openspec/changes/implement-mcp-tools/: plan.md  tasks.md
openspec/changes/implement-repository-pattern/: proposal.md  tasks.md
openspec/changes/import-orcbrew-data/: tasks.md
openspec/changes/list-open5e-documents/: design.md  proposal.md  tasks.md
openspec/changes/remove-deprecated-features/: plan.md  proposal.md  tasks.md
openspec/changes/remove-dnd5e-api-client/: plan.md  tasks.md
openspec/changes/remove-repository-parameter-from-mcp-tools/: proposal.md  tasks.md
openspec/changes/replace-sqlite-with-marqo/: design.md  plan.md  proposal.md  tasks.md
openspec/changes/scaffold-project-setup/: design.md  plan.md  proposal.md
openspec/changes/simplify-document-parameter/: tasks.md
openspec/changes/standardize-canonical-models/: tasks.md
openspec/specs/api-parameter-usage/: spec.md
openspec/specs/base-client/: spec.md
openspec/specs/canonical-models/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/code-quality/: spec.md
openspec/specs/complete-dnd5e-client/: spec.md
openspec/specs/complete-open5e-v1-client/: spec.md
openspec/specs/complete-open5e-v2-client/: spec.md
openspec/specs/database-setup/: spec.md
openspec/specs/dev-environment/: spec.md
openspec/specs/dnd5e-api-client/: spec.md
src/lorekeeper_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_basic.py  test_config.py  test_config_milvus.py  test_fixtures.py  test_project_structure.py  test_server.py
tests/fixtures/: sample.orcbrew
tests/test_api_clients/: test_base.py  test_dnd5e_api.py  test_exceptions.py  test_factory.py  test_models.py  test_open5e_v1.py  test_open5e_v2.py  test_refactor_no_cache.py
tests/test_cache/: test_db.py  test_embedding.py  test_factory.py  test_init.py  test_milvus.py  test_protocol.py  test_schema.py  test_sqlite.py
tests/test_cli/: test_import_integration.py  test_serve.py
tests/test_models/: __init__.py  test_base.py  test_creature.py  test_equipment.py  test_orcbrew.py  test_spell.py
tests/test_parsers/: __init__.py  test_entity_mapper.py  test_orcbrew.py
tests/test_repositories/: test_base.py  test_character_option.py  test_creature.py  test_equipment.py  test_factory.py  test_monster.py  test_rule.py  test_spell.py
tests/test_tools/: conftest.py  test_character_option_lookup.py  test_creature_lookup.py  test_document_filtering.py  test_end_to_end.py  test_equipment_lookup.py  test_integration.py  test_list_documents.py  test_live_mcp.py  test_module.py  test_rule_lookup.py  test_search_all.py  test_search_character_option.py  test_search_creature.py  test_search_dnd_content.py  test_search_equipment.py  test_search_rule.py  test_search_spell.py  test_spell_lookup.py
(+210 files in other folders)
